tests/ui/ferrocene/compiler-arguments/crate-type/crate-type_invalid-option.rs
//@ check-fail
//@ compile-flags: --crate-type=invalid
//~? ERROR unknown crate type

fn main() {}

// ferrocene-annotations: um_rustc_crate_type
